deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
spec:
  replicas: 2
  minReadySeconds: 10
  revisionHistoryLimit: 10
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 5
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: snack
          image: gcr.io/exponentjs/snack:SetInKustomizeYaml
          ports:
          - containerPort: 80
            name: http
          readinessProbe:
            httpGet:
              path: "/"
              port: 3011
            initialDelaySeconds: 1
          livenessProbe:
            httpGet:
              path: "/"
              port: 3011
            initialDelaySeconds: 10
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 800m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi
