deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snack
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3011
